builds with images

--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -32,6 +32,13 @@
                 </div>
             </div>
         </section>
+
+        <section class="blog-posts">
+            <h2>Latest Posts</h2>
+            <div class="posts-grid">
+                {{posts}}
+            </div>
+        </section>
     </main>
 
     {{footer}}
