--- a/templates/layouts/post.html
+++ b/templates/layouts/post.html
@@ -25,6 +25,7 @@
                 <div class="post-meta">
                     <time>{{date}}</time>
                 </div>
+                <img src="{{image}}" alt="{{title}}" class="post-header-image">
             </header>
             <div class="post-content">
                 {{content}}
