--- a/templates/layouts/post.html
+++ b/templates/layouts/post.html
@@ -7,16 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="/" class="logo">My Blog</a>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/pages/about.html">About</a></li>
-                <li><a href="/pages/faq.html">FAQ</a></li>
-            </ul>
-        </nav>
-    </header>
+    {{header}}
 
     <main>
         <article>
@@ -33,8 +24,6 @@
         </article>
     </main>
 
-    <footer>
-        <p>&copy; 2024 My Blog. All rights reserved.</p>
-    </footer>
+    {{footer}}
 </body>
 </html> 
