--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -2,7 +2,12 @@
     <nav>
         <a href="/" class="logo">My Blog</a>
         <ul>
-            <li><a href="/">Home</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle">Posts</a>
+                <ul class="dropdown-menu">
+                    {{posts_list}}
+                </ul>
+            </li>
             <li><a href="/public/about.html">About</a></li>
             <li><a href="/public/faq.html">FAQ</a></li>
         </ul>
