added subscribe partial

--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -39,6 +39,10 @@
                 {{posts}}
             </div>
         </section>
+
+        <section class="form-subscribe">
+            {{subscribe}}
+        </section>
     </main>
 
     {{footer}}
